# flashattention_Ascendc

./: .gitignore  README.md
.claude/skills/ascend-c-dev/: instructions.md
.claude/skills/ascend-c-dev/ref/: api_datacopy.md  api_matmul.md  api_softmax.md  arch.md  pipeline.md  tuning.md
bench/: bench_npu.py
plan/: NPU_TEST_PLAN.txt
src/: flash_attention.asc  flash_attention.cpp  flash_attention_tiling.h
src/op_host/: flash_attention.cpp
test/: test_e2e.py  test_npu.py  test_ref.py
tools/: CMakeLists.txt  build.sh  gen_tiling.py  run_test.sh
